[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/gui/MainMenuScene.gd" type="Script" id=1]
[ext_resource path="res://core/gui/Connect.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/gui/DevButtons.gd" type="Script" id=3]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -108.0
margin_top = -58.0
margin_right = 108.0
margin_bottom = 58.0
__meta__ = {
"_edit_group_": true
}

[node name="NewGame" type="Button" parent="Buttons"]
margin_right = 216.0
margin_bottom = 20.0
text = "New Game"

[node name="LoadGame" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 216.0
margin_bottom = 44.0
text = "Load"

[node name="JoinGame" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 216.0
margin_bottom = 68.0
text = "Join"

[node name="ExitGame" type="Button" parent="Buttons"]
margin_top = 72.0
margin_right = 216.0
margin_bottom = 92.0
text = "Exit"

[node name="Connect" parent="." instance=ExtResource( 2 )]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.1
margin_left = -114.0
margin_right = 114.0
margin_bottom = 107.0

[node name="DevButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 128.95
margin_top = -57.9
margin_right = 266.95
margin_bottom = 32.1
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CreateDelayLabel" type="Label" parent="DevButtons"]
margin_right = 138.0
margin_bottom = 14.0
text = "Create Game Delay"

[node name="CreateDelaySpinBox" type="SpinBox" parent="DevButtons"]
margin_top = 18.0
margin_right = 138.0
margin_bottom = 42.0
max_value = 3.0
step = 0.3

[node name="NewCreateButton" type="Button" parent="DevButtons"]
margin_top = 46.0
margin_right = 138.0
margin_bottom = 66.0
text = "New & Create"

[node name="JoinCreateButton" type="Button" parent="DevButtons"]
margin_top = 70.0
margin_right = 138.0
margin_bottom = 90.0
text = "Join & Create"

[connection signal="pressed" from="Buttons/NewGame" to="." method="newGame"]
[connection signal="pressed" from="Buttons/LoadGame" to="." method="loadGame"]
[connection signal="pressed" from="Buttons/JoinGame" to="." method="joinGame"]
[connection signal="pressed" from="Buttons/ExitGame" to="." method="exitProgram"]
[connection signal="value_changed" from="DevButtons/CreateDelaySpinBox" to="DevButtons" method="_on_CreateGameSpinBox_value_changed"]
[connection signal="pressed" from="DevButtons/NewCreateButton" to="DevButtons" method="_on_NewCreateButton_pressed"]
[connection signal="pressed" from="DevButtons/JoinCreateButton" to="DevButtons" method="_on_JoinCreateButton_pressed"]

[editable path="Connect"]
